# bitwarden-rbw-krunner-plugin

./: Cargo.toml  LICENSE  README.md  bitwarden-rbw-krunner.desktop  config.example.toml  de.leifb.BitwardenRbwKrunner.service  install.sh  uninstall.sh
src/: commands.rs  config.rs  main.rs  notify.rs  profile_discovery.rs  rbw.rs  runner.rs
