[package]
name = "bitwarden-rbw-krunner"
version = "1.0.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
krunner = { version="0.1.1", features = ["derive"] }
log = "0.4.28"
notify-rust = "4.11.7"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.8", features = ["serde"] }
